--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=ApiGateway
+function.url: https://func-fiap-webb123.azurewebsites.net
+function.scope: api://af2cb925-7bcf-4990-afda-add0be8e6088/.default
